@@ -1,6 +1,6 @@
 ; tests for bug #423850 Hang on bad #define directive
 
-     list p=16c84
+     list p=16f84
 
 #define foo foo
 
