@@ -1,5 +1,5 @@
     list p=16f737
-    #include <p16f737.inc>
+    #include <P16F737.INC>
 
     __CONFIG _CONFIG2, H'0000'
     __CONFIG _CONFIG1, H'0000'
